--- a/Assets/Scripts/InputCharacter/PlayerControllerCharacter.asmdef
+++ b/Assets/Scripts/InputCharacter/PlayerControllerCharacter.asmdef
@@ -5,7 +5,8 @@
         "GUID:9fde674d7da91064f84417913234e723",
         "GUID:dd73d9f039ee2c541a404358e89fd641",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:186a8fe3308372d419672c19171a1ad4"
+        "GUID:186a8fe3308372d419672c19171a1ad4",
+        "GUID:4307f53044263cf4b835bd812fc161a4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
